--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "rest-express",
+  "name": "chronoflip",
   "version": "1.0.0",
+  "description": "A beautiful flip-style digital clock with Pomodoro timer functionality. Features retro flip card animations and productivity tracking.",
+  "author": {
+    "name": "yashbytes",
+    "url": "https://github.com/yashbytes"
+  },
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "NODE_ENV=development tsx server/index.ts",
-    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
-    "start": "NODE_ENV=production node dist/index.js",
-    "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "dev": "tsx server/index.ts",
+    "build": "vite build",
+    "start": "node dist/index.js",
+    "check": "tsc"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -76,8 +80,6 @@
     "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
-    "@replit/vite-plugin-cartographer": "^0.2.8",
-    "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.1.3",
     "@types/connect-pg-simple": "^7.0.3",
