Update author GitHub URL

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A beautiful flip-style digital clock with Pomodoro timer functionality. Features retro flip card animations and productivity tracking.",
   "author": {
     "name": "yashbytes",
-    "url": "https://github.com/yashbytes"
+    "url": "https://github.com/Real-Yash"
   },
   "type": "module",
   "license": "MIT",
